@@ -13,6 +13,8 @@ BZFlag 2.0.9
 
 * Check for talk permission for part/quit messages  - uso
 * First map no longer ignored in Start Server menu - Ravu al Hemio
+* Implemented Confine Mouse for Windows platforms - Daniel Remenak
+* Implemented fullscreen->windowed mode toggle on Windows - Daniel Remenak
 * Add the rabidRabbit plugin - LouMan
 * Add packet loss kick and related admin commands - Thomas Stauer
 * Reclaim lost memory from sound sample - Tupone Alfredo
